--- a/css/common.css
+++ b/css/common.css
@@ -137,21 +137,9 @@ li {
     padding: 3%;
   }
 }
-#header .btn_menu::after {
-  content: "\f0c9";
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-}
-#header .btn_menu.active::after {
-  content: "\f00d";
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  font-size: 140%;
-}
 #header .logo {
   padding-top: 0;
   width: 100%;
-  text-align: center;
 }
 @media only screen and (max-width: 767px) {
   #header .logo {
@@ -210,8 +198,8 @@ li {
 #header .box_util .box_sns {
   display: flex;
 }
-#header .box_util .box_sns li {
-  opacity: 0.5;
+#header .box_util .box_sns li p {
+  padding: 0.5em;
 }
 #header .box_util .address li {
   font-family: "Open Sans", sans-serif;
@@ -292,10 +280,10 @@ li {
   box-sizing: border-box;
   position: fixed;
   overflow-y: scroll;
-  left: -100%;
+  right: -100%;
   z-index: 100;
   background-color: #f9f9f9;
-  transition: left 0.35s ease;
+  transition: right 0.35s ease;
 }
 .open_menu ul {
   padding: 10% 0 25%;
@@ -394,7 +382,8 @@ li {
   margin-left: 0;
 }
 .open_menu.active {
-  left: 0;
+  top: 0;
+  right: 0;
 }
 
 #con_page {
@@ -572,170 +561,141 @@ li {
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li:last-child {
   margin-right: 5%;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
-  width: 300px;
-  width: 320px;
-  display: inline-flex;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+#con_page .con_slide_hot {
+  padding: 0 5%;
+  margin: 10% 0;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot {
+    padding: 0 3%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot {
+    margin: 10% 0;
+  }
+}
+#con_page .con_slide_hot h2 {
+  font-size: 125%;
+  margin-bottom: 3%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_hot h2 {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot h2 {
+    font-size: 107%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot h2 {
+    margin-bottom: 3%;
+  }
+}
+#con_page .con_slide_hot h2 small {
+  font-size: 82%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_hot h2 small {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot h2 small {
+    font-size: 69%;
+  }
+}
+#con_page .con_slide_hot h2 small:after {
+  content: "";
+  display: inline-block;
+  width: 7px;
+  height: 10px;
+  background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+  margin-left: 0.5em;
+}
+#con_page .con_slide_hot .box_list ul li {
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
   border-bottom: 1px solid #e6e6e6;
+  padding-bottom: 3%;
+  margin-bottom: 3%;
 }
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
-    width: 80%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
-    margin-bottom: 5%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
-    padding-bottom: 5%;
-  }
-}
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic {
-  margin-right: 8px;
+#con_page .con_slide_hot .box_list ul li .box_profile {
   position: relative;
+  margin-right: 0.5em;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic .user {
-  border-radius: 100px;
-  overflow: hidden;
+#con_page .con_slide_hot .box_list ul li .box_profile .pic {
   width: 48px;
   height: 48px;
+  overflow: hidden;
+  border-radius: 50%;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic .ic_md {
+#con_page .con_slide_hot .box_list ul li .box_profile .ic_md {
   position: absolute;
   right: 0;
   bottom: 0;
   line-height: 1;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt {
+#con_page .con_slide_hot .box_list ul li .box_txt dt {
+  display: flex;
+  align-items: center;
+}
+#con_page .con_slide_hot .box_list ul li .box_txt dt .p_name {
+  font-size: 100%;
+  margin-right: 0.5em;
   line-height: 1;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
-  font-size: 100%;
-}
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
+  #con_page .con_slide_hot .box_list ul li .box_txt dt .p_name {
     font-size: 100%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
+  #con_page .con_slide_hot .box_list ul li .box_txt dt .p_name {
     font-size: 82%;
   }
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
+#con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
   font-size: 82%;
+  display: flex;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
+  #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
     font-size: 82%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
-    font-size: 75%;
+  #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
+    font-size: 69%;
   }
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star img {
+#con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star img {
   width: 0.7em;
-  margin-right: 0.3em;
+  margin-right: 0.2em;
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
+#con_page .con_slide_hot .box_list ul li .box_txt dd {
   font-size: 82%;
   color: #a4a4a4;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
+  #con_page .con_slide_hot .box_list ul li .box_txt dd {
     font-size: 82%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
-    font-size: 75%;
-  }
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li {
-  display: inline-flex;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #e6e6e6;
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li {
-    margin-bottom: 5%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li {
-    padding-bottom: 5%;
-  }
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic {
-  margin-right: 8px;
-  position: relative;
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic .user {
-  border-radius: 100px;
-  overflow: hidden;
-  width: 48px;
-  height: 48px;
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic .ic_md {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  line-height: 1;
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt {
-  line-height: 1;
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
-  font-size: 100%;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
-    font-size: 100%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
+  #con_page .con_slide_hot .box_list ul li .box_txt dd {
     font-size: 82%;
   }
 }
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
-  font-size: 82%;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
-    font-size: 82%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
-    font-size: 75%;
-  }
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star img {
-  width: 0.7em;
-  margin-right: 0.3em;
-}
-#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
-  font-size: 82%;
-  color: #a4a4a4;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
-    font-size: 82%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
-    font-size: 75%;
-  }
+#con_page .con_slide_hot .box_list ul li .box_txt dd .time em {
+  color: #5726cb;
 }
 #con_page .con_wrd_list {
   padding: 0 5%;
