--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -104,25 +104,9 @@ li {list-style-type: none;}
 	box-sizing: border-box;
 	z-index: 100;
 	border-right: 1px solid $lightGray;
-	.btn_menu {
-		&::after {
-			content: "\f0c9";
-			font-family: 'Font Awesome 6 Free';
-			font-weight: 900;
-		}
-		&.active {
-			&::after {
-				content: "\f00d";
-				font-family: 'Font Awesome 6 Free';
-				font-weight: 900;
-				font-size: 140%;
-			}
-		}
-	}
 	.logo {
 		@include cV(padding-top, 0, 0.1em);
 		@include cV(width, 100%, 50%);
-		text-align: center;
 		a {
 			display: block;
 		}
@@ -149,7 +133,9 @@ li {list-style-type: none;}
 		.box_sns {
 			display: flex;
 			li {
-				opacity: 0.5;
+				p {
+					padding: 0.5em;
+				}
 			}
 		}
 		.address {
@@ -227,10 +213,10 @@ li {list-style-type: none;}
 	box-sizing: border-box;
 	position: fixed;
 	overflow-y: scroll;
-	left: -100%;
+	right: -100%;
 	z-index: 100;
 	background-color: #f9f9f9;
-	transition: left 0.35s ease;
+	transition: right 0.35s ease;
 	ul {
 		padding: 10% 0 25%;
 		.nav {
@@ -325,7 +311,8 @@ li {list-style-type: none;}
 		}
 	}
 	&.active {
-		left: 0;
+		top: 0;
+		right: 0;
 	}
 }
 
@@ -401,7 +388,6 @@ li {list-style-type: none;}
 							small {
 								@include fsz-cha(13,13,12);
 								color: $dkGray;
-								.p-num {}
 								.c-num {
 									margin-left: 0.5em;
 									strong {
@@ -422,71 +408,49 @@ li {list-style-type: none;}
 						margin-right: 5%;
 					}
 				}
-				&.player_list {
-					li {
-						width: 300px;
-						@include cV(width, 320px, 80%);
-						display: inline-flex;
-						@include cV(margin-bottom, 20px, 5%);
-						@include cV(padding-bottom, 20px, 5%);
-						border-bottom: 1px solid $lightGray;
-						.pic {
-							margin-right: 8px;
-							position: relative;
-							.user {
-								border-radius: 100px;
-								overflow: hidden;
-								width: 48px;
-								height: 48px;
-							}
-							.ic_md {
-								position: absolute;
-								right: 0;
-								bottom: 0;
-								line-height: 1;
-							}
-						}
-						.box_txt {
-							dt {
-								line-height: 1;
-								.p_id {
-									@include fsz-cha(16,16,13);
-								}
-								.ic_star {
-									@include fsz-cha(13,13,12);
-									img {
-										width: 0.7em; 
-										margin-right: 0.3em;
-									}
-								}
-							}
-							dd {
-								.cate, .info {
-									@include fsz-cha(13,13,12);
-									color: $dkGray;
-								}
-							}
-	
-						}
-					}
+			}
+		}
+	}
+	// slide_hot
+	.con_slide_hot {
+		@include cV(padding, 0 5%, 0 3%);
+		@include cV(margin, 10% 0, 10% 0);
+		h2 {
+			@include fsz-cha(20,20);
+			@include cV(margin-bottom, 3%, 3%);
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding-right: 5%;
+			small {
+				@include fsz-cha(13,13,11);
+				&:after {
+					content: "";
+					display: inline-block;
+					width: 7px;
+					height: 10px;
+					background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+					margin-left: 0.5em;
 				}
 			}
 		}
-		.con_player_list {
-			.box_slide_list {
+		.box_list {
+			ul {
 				li {
-					display: inline-flex;
-					@include cV(margin-bottom, 20px, 5%);
-					@include cV(padding-bottom, 20px, 5%);
+					display: flex;
+					box-sizing: border-box;
+					align-items: center;
 					border-bottom: 1px solid $lightGray;
-					.pic {
-						margin-right: 8px;
+					padding-bottom: 3%;
+					margin-bottom: 3%;
+					.box_profile {
 						position: relative;
-						.user {
-							border-radius: 100px;
-							overflow: hidden;
+						margin-right: 0.5em;
+						.pic {
 							width: 48px;
 							height: 48px;
+							overflow: hidden;
+							border-radius: 50%;
 						}
 						.ic_md {
 							position: absolute;
@@ -497,30 +461,37 @@ li {list-style-type: none;}
 					}
 					.box_txt {
 						dt {
-							line-height: 1;
-							.p_id {
+							display: flex;
+							align-items: center;
+							.p_name {
 								@include fsz-cha(16,16,13);
+								margin-right: 0.5em;
+								line-height: 1;
 							}
 							.ic_star {
-								@include fsz-cha(13,13,12);
+								@include fsz-cha(13,13,11);
+								display: flex;
 								img {
-									width: 0.7em; 
-									margin-right: 0.3em;
+									width: 0.7em;
+									margin-right: 0.2em;
 								}
 							}
 						}
 						dd {
-							.cate, .info {
-								@include fsz-cha(13,13,12);
-								color: $dkGray;
+							@include fsz-cha(13,13,13);
+							color: $dkGray;
+							.time {
+								em {
+									color: $pointColor;
+								}
 							}
 						}
-
 					}
 				}
 			}
 		}
 	}
+
 
 	// world_icon_list_form
 	.con_wrd_list {
